--- a/themes/vahc-theme/templates/page.html
+++ b/themes/vahc-theme/templates/page.html
@@ -32,7 +32,9 @@
 
 {% block navigation %}
 <a class="navbar-brand" href="{{ page_name | pg2path }}">
-    &lt; Back to Home
+    &lt; 
+    Back to 
+    Home
 </a>
 {% endblock navigation %}
 
