--- a/themes/vahc-theme/templates/base.html
+++ b/themes/vahc-theme/templates/base.html
@@ -106,6 +106,7 @@
                         {% for event in PAST_EVENTS %}
                         <div class="col col-md-6">
                             <a target="_blank"
+                                class="link-past-event"
                                 href="../arxiv/{{ event[0] }}/">
                                 {{ event[0] }}, 
                                 {{ event[1] }}
