--- a/themes/vahc-theme/templates/page.html
+++ b/themes/vahc-theme/templates/page.html
@@ -31,11 +31,26 @@
 {% endblock add_this %}
 
 {% block navigation %}
-<a class="navbar-brand" href="{{ page_name | pg2path }}">
+<!-- <a class="navbar-brand" 
+    href="{{ page_name | pg2path }}">
     &lt; 
     Back to 
     Home
-</a>
+</a> -->
+<div class="collapse navbar-collapse" id="navbarMenu">
+    <ul class="navbar-nav mr-auto text-center">
+        <li class="nav-item {% if page_name == 'index' %} active {% endif %}">                           
+            <a class="nav-link" 
+                href="{{ page_name | pg2path }}">
+                <svg class="nav-icon" xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 24 24">
+                    <path d="M21 13v10h-6v-6h-6v6h-6v-10h-3l12-12 12 12h-3zm-1-5.907v-5.093h-3v2.093l3 3z" fill="currentColor"></path>
+                </svg>
+                Back to
+                Home <span class="sr-only">(current)</span>
+            </a>
+        </li>
+    </ul>
+</div>
 {% endblock navigation %}
 
 
