update CFP page and template

--- a/themes/vahc-theme/templates/base.html
+++ b/themes/vahc-theme/templates/base.html
@@ -17,6 +17,11 @@
 <meta name="HandheldFriendly" content="True" />
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
+<!-- Disable cache -->
+<meta http-equiv="cache-control" content="no-cache" />
+<meta http-equiv="expires" content="0" />
+<meta http-equiv="pragma" content="no-cache" />
+
 <!-- Default metadata -->
 {% block meta %}
 <meta name="author" content="{{ AUTHOR }}" />
