--- a/themes/vahc-theme/templates/base.html
+++ b/themes/vahc-theme/templates/base.html
@@ -123,7 +123,7 @@
                 <div class="col-12 col-md-3">
                     <h5>SOCIAL MEDIA</h5>
                     <ul class="list-unstyled text-small">
-                        <li><a class="link-white" href="./">Twitter</a></li>
+                        <li><a class="link-white" href="https://twitter.com/VisAnalyticsHC">Twitter</a></li>
                     </ul>
                 </div>
 
