--- a/themes/vahc-theme/templates/article.html
+++ b/themes/vahc-theme/templates/article.html
@@ -99,6 +99,13 @@
                 Program
             </a>
         </li>
+        {% if article.category == '2023' %}
+        <li class="nav-item">
+            <a class="nav-link" href="./panel.html">
+                Panel
+            </a>
+        </li>
+        {% endif %}
         <li class="nav-item">
             <a class="nav-link" href="./proceedings.html">
                 Proceedings
