--- a/themes/vahc-theme/templates/article.html
+++ b/themes/vahc-theme/templates/article.html
@@ -106,6 +106,13 @@
             </a>
         </li>
         {% endif %}
+        {% if article.category in ['2023'] %}
+        <li class="nav-item">
+            <a class="nav-link" href="./workshop-event.html">
+                Workshop Event
+            </a>
+        </li>
+        {% endif %}
         <li class="nav-item">
             <a class="nav-link" href="./proceedings.html">
                 Proceedings
