--- a/themes/vahc-theme/templates/index.html
+++ b/themes/vahc-theme/templates/index.html
@@ -1,10 +1,16 @@
 <html>
 <head>
-<meta http-equiv="cache-control" content="no-cache" />
+<meta http-equiv="cache-control" content="no-cache, no-store, must-revalidate" />
 <meta http-equiv="expires" content="0" />
 <meta http-equiv="pragma" content="no-cache" />
 <title>VAHC {{ DEFAULT_YEAR }}: Workshop on Visual Analytics in Healthcare</title>
 <meta http-equiv="refresh" content="0;url=./{{ DEFAULT_YEAR }}/" />
+<script>
+  // This script ensures the redirect happens even if the page is cached
+  window.onload = function() {
+    window.location.href = './{{ DEFAULT_YEAR }}/';
+  }
+</script>
 </head>
 <body>
 </body>
