--- a/themes/vahc-theme/templates/base.html
+++ b/themes/vahc-theme/templates/base.html
@@ -138,6 +138,18 @@
             <h5>SOCIAL MEDIA</h5>
             <ul class="list-unstyled text-small">
               <li>
+                <a class="link-white" href="https://www.linkedin.com/company/visual-analytics-in-healthcare/posts/?feedView=all"
+                  >LinkedIn</a
+                >
+                <a class="link-white" href="https://bsky.app/profile/vahc.bsky.social"
+                  >BlueSky</a
+                >
+                <a class="link-white" href="https://www.threads.com/@vahc_2025"
+                  >Threads</a
+                >
+                <a class="link-white" href="https://mastodon.social/@VAHC"
+                  >Mastodon</a
+                >
                 <a class="link-white" href="https://twitter.com/VisAnalyticsHC"
                   >Twitter</a
                 >
