--- a/themes/vahc-theme/templates/article.html
+++ b/themes/vahc-theme/templates/article.html
@@ -94,6 +94,13 @@
                 Call for Papers
             </a>
         </li>
+        {% if article.category in ['2025'] %}
+        <li class="nav-item">
+            <a class="nav-link" href="./docconsortium.html">
+                Doctoral Consortium
+            </a>
+        </li>
+        {% endif %}
         <li class="nav-item">
             <a class="nav-link" href="./program.html">
                 Program
