--- a/themes/vahc-theme/templates/article.html
+++ b/themes/vahc-theme/templates/article.html
@@ -94,7 +94,7 @@
                 Call for Papers
             </a>
         </li>
-        {% if article.category in ['2025'] %}
+        {% if article.category == '2025' %}
         <li class="nav-item">
             <a class="nav-link" href="./docconsortium.html">
                 Doctoral Consortium
